# flight-searcher

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-05-flight-searcher-v1.md
docs/superpowers/specs/: 2026-07-05-flight-searcher-v1-design.md
flight_searcher/: cache.py  cli.py  flex.py  formatting.py  models.py  search.py
flight_searcher/providers/: base.py  google_flights.py
tests/: test_cache.py  test_cli.py  test_flex.py  test_formatting.py  test_google_flights.py  test_models.py  test_search.py  test_smoke.py
